Update Gradle and Dependencies